# wasmprof

./: .gitignore  Cargo.toml  README.md  blog.md
.github/: dependabot.yml
.github/workflows/: default.yml
crates/dummy_runtime/: Cargo.toml
crates/dummy_runtime/src/: main.rs
examples/: basic.rs  fuel_profile.rs  speedscope_export.rs
src/: collapsed_stack.rs  lib.rs  profile_data.rs  speedscope.rs  timer.rs
src/ticker/: mod.rs  signal.rs  thread.rs
src/ticker/signal/: timer.rs
