[package]
name = "wasmprof"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "wasmprof allows to profile code running inside of wasmtime"
homepage = "https://github.com/Shopify/wasmprof"
keywords = ["wasm", "wasmtime", "profiler"]
categories = ["wasm", "development-tools::profiling"]

[dependencies]
cpp_demangle = "0.4.1"
libc = "0.2.142"
nix = { version = "0.26", default-features = false, features = ["signal"] }
rustc-demangle = "0.1.24"
spin_sleep = "1.1.1"
wasmtime = "31.0.0"

[features]
perf-event = []
